syntax = "proto3";
package pqxdh;

import "crypto/curve/keys.proto";

message PBSignedCurvePrekey {
    crypto.curve.PBIdentifiedEllipticCurvePublicKey identified_public_key = 1;
    bytes signature = 2;
}
